--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/check": "^0.3.2",
     "@astrojs/netlify": "^3.1.1",
+    "@astrojs/node": "^9.2.1",
     "@astrojs/partytown": "^2.0.4",
     "@astrojs/react": "^4.2.7",
     "@astrolib/seo": "^1.0.0-beta.5",
