--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@astrojs/check": "^0.3.2",
     "@astrojs/netlify": "^3.1.1",
     "@astrojs/partytown": "^2.0.4",
+    "@astrojs/react": "^4.2.7",
     "@astrolib/seo": "^1.0.0-beta.5",
+    "@splidejs/react-splide": "^0.7.12",
     "astro": "^4.0.4",
+    "astro-embed": "^0.9.0",
+    "astro-splide": "^1.7.0",
     "axios": "^1.6.2",
     "lodash.merge": "^4.6.2",
     "sharp": "^0.33.0",
